--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -112,7 +112,7 @@ Vediamo come agisce il generatore del gruppo
     \frametitle{Convoluzione Spettrale}
     Data la simmetria avremo che per qualsiasi osservabile $\widehat{O}$
     \[ [\widehat{S}, \widehat{O}] = 0 . \]
-    L'operatore $\widehat{S}$ è diagonalizzabile $\widehat{S} |s_i \rangle = s_i | s_i \rangle$,\\ sfruttando l'analogia con $\R^n$ otteniamo una trasformata.
+    L'operatore $\widehat{S}$ è diagonalizzabile $\widehat{S} |s_i \rangle = s_i | s_i \rangle$ in $\C$,\\ sfruttando l'analogia con $\R^n$ otteniamo una trasformata.
     \begin{block}{Trasformata di Fourier in $\mc{S}$}
         \[ \langle i | \psi \rangle \mapsto \langle s_i | \psi \rangle. \]
     \end{block}
